refactor: enhance ConsumerMetrics with backpressure tracking and improve test assertions